--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript version of Rock, Paper, Scissors, Lizard, Spock - an exploration of OOP in JavaScript with a focus on building classes that handle primary data of application.",
   "main": "game.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node game.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jjvega86/JavaScript_RPSLS/issues"
   },
-  "homepage": "https://github.com/jjvega86/JavaScript_RPSLS#readme"
+  "homepage": "https://github.com/jjvega86/JavaScript_RPSLS#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
